tests/Fase2-Semantic/error/t01-repeated_var_in_same_field.ctds
class main {
	integer x,x;

	integer add(){
		x = x+1;
		return x;
	}

	void main(){
		x=0;
		add();
	}
	
}